...
//           value={comment}
//           onChangeText={handleCommentChange}
//           multiline
//           numberOfLines={4}
//         />
//         <View style={styles.buttonContainer}>
//           <MainButton label="Cancel" onPress={handleCancel} />
//           <MainButton label="Submit Review" onPress={handleReviewSubmit} />
//         </View>
//       </View>
//     </ThemedModal>
//   )
// }
...
