...
            style={styles.buttonsContainer}
            enter={{ type: 'stretchInY' }}
            exit={{ type: 'stretchOutY' }}
          >
            <EdgeTouchableOpacity
              style={styles.buttonContainer}
              testID="addressTileEnter"
              onPress={handleChangeAddress}
            >
              <FontAwesome
                name="edit"
                size={theme.rem(2)}
                color={theme.iconTappable}
...
                  {lstrings.fragment_send_myself}
                </EdgeText>
              </EdgeTouchableOpacity>
            ) : null}
            <EdgeTouchableOpacity
              style={styles.buttonContainer}
              testID="addressTileScan"
              onPress={handleScan}
            >
              <FontAwesome5
                name="expand"
                size={theme.rem(2)}
                color={theme.iconTappable}
...
