...
            aroundRem={0.5}
          />
        )}
        <Row>
          <EdgeButton
            marginRem={0.5}
            label="Submit"
            onPress={handleSubmit}
            type="primary"
            spinner={loading}
          />
          {loading ? <ActivityIndicator color={theme.iconTappable} /> : null}
        </Row>
...
