...
                <Ionicon style={styles.icon} name="albums-outline" />
                <EdgeText>{lstrings.fragment_send_album}</EdgeText>
              </EdgeTouchableOpacity>
              <EdgeTouchableOpacity
                style={styles.iconButton}
                onPress={handleTextInput}
                testID="scanModalTextInput"
              >
                <Ionicon style={styles.icon} name="pencil-outline" />
                <EdgeText>
                  {lstrings.enter_as_in_enter_address_with_keyboard}
                </EdgeText>
              </EdgeTouchableOpacity>
...
